# django_test

./: .env.example  .gitignore  1. 조립 가설기자재 품질평가 및 관리 소프트웨어 오류_시스템 관리자.hwp  1. 조립 가설기자재 품질평가 및 관리 소프트웨어 오류_시스템 관리자_수정사항.docx  2. 조립 가설기자재 품질평가 및 관리 소프트웨어 오류_일반 사용자_수정.docx  3. 조립 가설기자재 품질평가 및 관리 소프트웨어 오류_현장 대리인.hwp  LICENSE  README.md  db.json  init.json  init_data.yaml  manage.py  pyproject.toml  requirements.txt  reset_server.ps1  run.ps1  sample.py  time_add.ipynb  work_log.md  사용법.md  수정사항.xlsx
.github/workflows/: django.yml
announcement/: admin.py  forms.py  models.py  urls.py  views.py
inha/: asgi.py  settings.py  urls.py  wsgi.py
law/: forms.py  models.py  urls.py  views.py
main/: models.py  tests.py  urls.py  views.py
result/: services.py  urls.py  views.py
static/css/: style.css
static/js/: sign.js
system_manager/: apps.py  forms.py  models.py  services.py  urls.py  views.py
system_manager/views/: document_views.py  field_views.py  locate_views.py  main_views.py  user_management_views.py
templates/announcement/: announcement.html  create_announcement.html  read_announcement.html
templates/auth/: agreeForAdmin.html  agreeForUser.html  editAdmin.html  editUser.html  form_errors.html  login.html  registerAdmin.html  registerUser.html  usertype.html
templates/base/: head.html  header.html  messages.html  navbar_main.html
templates/law/: create_law.html  law.html  read_law.html
templates/main/: home.html
user/: forms.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
work/: form.py  models.py  urls.py
(+96 files in other folders)
