[tool.poetry]
name = "django_inha"
version = "0.1.0"
description = ""
authors = ["seokmin <soos3121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
Pillow = "^9.0.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
